# Personal-Finance-Tracker

./: .env.example  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
api/v1/: api.py
api/v1/endpoints/: auth.py  categories.py  transactions.py  users.py
app/: database.py  dependencies.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  categories.py  transactions.py  users.py
app/core/: security.py
app/models/: __init__.py  budget.py  category.py  transaction.py
app/schemas/: category.py
app/tests/: conftest.py
core/: security.py
models/: budget.py  category.py  transaction.py  user.py
schemas/: budget.py  category.py  transaction.py
tests/: conftest.py
